COMMERCE-4594 Fixed side panel z-index

--- a/modules/apps/commerce/commerce-frontend-js/src/main/resources/META-INF/resources/components/side_panel/_side_panel.scss
+++ b/modules/apps/commerce/commerce-frontend-js/src/main/resources/META-INF/resources/components/side_panel/_side_panel.scss
@@ -10,7 +10,7 @@ $header-height: 65px;
 	transition: transform ease 500ms, box-shadow ease 500ms, width ease 500ms;
 	width: 70%;
 	will-change: transform, box-shadow, opacity, width;
-	z-index: 989;
+	z-index: 1020;
 
 	&-close {
 		opacity: 0.5;
